[gd_scene load_steps=13 format=3 uid="uid://i5kughnf8rhp"]

[ext_resource type="Script" uid="uid://c8cy5n0byviqr" path="res://scripts/level_03.gd" id="1_2wlag"]
[ext_resource type="Script" uid="uid://tuogonxqxo8n" path="res://scripts/game_manager.gd" id="2_3ew82"]
[ext_resource type="PackedScene" uid="uid://s7e5ceul3pog" path="res://scenes/player_ship.tscn" id="3_0bj1y"]
[ext_resource type="PackedScene" uid="uid://kiferfchw8o1" path="res://scenes/vanish_zone.tscn" id="6_6181x"]
[ext_resource type="Script" uid="uid://ceq81bdk7s821" path="res://scripts/enemy_spawner.gd" id="7_j4ks3"]
[ext_resource type="PackedScene" uid="uid://qucarv55v55b" path="res://scenes/boss_01.tscn" id="8_5pqto"]
[ext_resource type="AudioStream" uid="uid://46psg764pq60" path="res://assets/audio/music/Lost Circuits.mp3" id="10_jx2nq"]
[ext_resource type="PackedScene" uid="uid://c8n560fb2873m" path="res://scenes/panel_score.tscn" id="12_phrv1"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_5p57d"]
distance = 88.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_rpmp5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b2w0k"]
size = Vector2(20, 549)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3bqp"]
size = Vector2(240, 479)

[node name="Game" type="Node2D"]
script = ExtResource("1_2wlag")

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_3ew82")

[node name="PlayerShip" parent="." instance=ExtResource("3_0bj1y")]
position = Vector2(290, -179)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(299, 2)
scale = Vector2(0.2, 0.2)
zoom = Vector2(2, 2)
limit_left = 0
limit_top = -360
limit_right = 1500
limit_bottom = 360

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1178, -507)
stream = ExtResource("10_jx2nq")
autoplay = true
max_distance = 4096.0
bus = &"Music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 0, 0)

[node name="PanelScore" parent="CanvasLayer" instance=ExtResource("12_phrv1")]
offset_left = 1.5
offset_top = 1.5
offset_right = 56.5
offset_bottom = 31.5

[node name="InvisibleWall" type="StaticBody2D" parent="."]
position = Vector2(188, 360)
collision_mask = 2

[node name="CollisionBottom" type="CollisionShape2D" parent="InvisibleWall"]
shape = SubResource("WorldBoundaryShape2D_5p57d")

[node name="CollisionTop" type="CollisionShape2D" parent="InvisibleWall"]
position = Vector2(71, -716)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_5p57d")

[node name="CollisionLeft" type="CollisionShape2D" parent="InvisibleWall"]
position = Vector2(-277, -361)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_5p57d")

[node name="CollisionRight" type="CollisionShape2D" parent="InvisibleWall"]
position = Vector2(858, -360)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_5p57d")

[node name="VanishZone" parent="." instance=ExtResource("6_6181x")]
position = Vector2(-100, 0)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="VanishZone"]
position = Vector2(1156, 0)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_rpmp5")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="VanishZone"]
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_rpmp5")

[node name="EnemySpawner" type="Node2D" parent="."]
position = Vector2(935, 2)
script = ExtResource("7_j4ks3")

[node name="StaticBody2D" type="StaticBody2D" parent="EnemySpawner"]

[node name="AreaSpawner" type="CollisionShape2D" parent="EnemySpawner/StaticBody2D"]
position = Vector2(0, -3.49999)
shape = SubResource("RectangleShape2D_b2w0k")

[node name="BossMovementArea" type="StaticBody2D" parent="."]
position = Vector2(795, 1)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossMovementArea"]
position = Vector2(-20, 7.5)
shape = SubResource("RectangleShape2D_r3bqp")

[node name="Boss01" parent="." instance=ExtResource("8_5pqto")]
position = Vector2(763, 18)
scale = Vector2(2, 2)
